--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@ Licenc: GNU GPL
         <div class="input">
           <label for="vol" class="form-label">Térfogat:</label>
           <input type="text" class="form-control"
-          id="vol">
+          id="vol" readonly>
         </div>
       </div>
     <script type="module" src="app.js"></script>
